--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.0",
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-community/datetimepicker": "^8.4.2",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/stack": "^7.0.6",
     "axios": "^1.7.7",
-    "expo": "~52.0.11",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-gesture-handler": "^2.21.2",
-    "react-native-reanimated": "^3.16.2",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.3.0",
-    "react-native-svg": "^15.9.0",
-    "react-native-web": "~0.19.13"
+    "expo": "^53.0.15",
+    "expo-image-picker": "~16.1.4",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
+    "react-native-table-component": "^1.2.2",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
