--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "^53.0.16",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
+    "node-forge": "^1.3.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
